--- a/Pages/Vouchers/_VoucherDetailRows.cshtml
+++ b/Pages/Vouchers/_VoucherDetailRows.cshtml
@@ -14,12 +14,14 @@
         @for (int i = 0; i < Model.Voucher.Details.Count; i++)
         {
             <tr>
-                @* <td>
-                    <select asp-for="Voucher.Details[i].AccountId" asp-items="Model.Accounts" class="form-control">
+                <td>
+                    <select asp-for="Voucher.Details[i].AccountId"
+                            asp-items="@(new SelectList(Model.Accounts, "AccountId", "AccountName"))"
+                            class="form-control">
                         <option value="">-- Select Account --</option>
                     </select>
                     <span asp-validation-for="Voucher.Details[i].AccountId" class="text-danger"></span>
-                </td> *@
+                </td>
                 <td>
                     <input asp-for="Voucher.Details[i].DebitAmount" class="form-control" />
                     <span asp-validation-for="Voucher.Details[i].DebitAmount" class="text-danger"></span>
