Voucher Input field modified

--- a/Pages/Vouchers/JournalVoucher.cshtml
+++ b/Pages/Vouchers/JournalVoucher.cshtml
@@ -12,7 +12,7 @@
     <div class="row mb-3">
         <div class="col-md-5">
             <label asp-for="VoucherViewModel.Voucher.VoucherType" class="form-label"></label>
-            <input asp-for="VoucherViewModel.Voucher.VoucherType" class="form-control" />
+            <input asp-for="VoucherViewModel.Voucher.VoucherType" class="form-control" readonly />
             <span asp-validation-for="VoucherViewModel.Voucher.VoucherType" class="text-danger"></span>
         </div>
         <div class="col-md-3">
