--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AccountManagementSystem
+@using AccountManagementSystem.Models
 @namespace AccountManagementSystem.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
